test/fail/error_optional_parameter_unify2.sest

module ErrorOptionalParameterUnify2 = struct

  let g1(?foo nopt) = {nopt, None}

  let g2(?foo nopt, ?bar bopt) = {nopt, bopt}

  let g(flag) = if flag then g1 else g2

end
